Closed Bug 1712064 Opened 3 years ago Closed 3 years ago

security/manager/ssl/nsNSSComponent.cpp:2539:24: error: ?MakeScopeExit? was not declared in this scope

Categories

(Core :: Security: PSM, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- fixed
firefox90 --- fixed

People

(Reporter: petr.sumbera, Assigned: petr.sumbera)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0

Steps to reproduce:

Solaris build fails with:

19:56.73 In file included from Unified_cpp_security_manager_ssl2.cpp:29:
19:56.73 /builds/psumbera/mozilla-central-build/security/manager/ssl/nsNSSComponent.cpp: In function ?mozilla::UniqueCERTCertList mozilla::psm::FindClientCertificatesWithPrivateKeys()?:
19:56.73 /builds/psumbera/mozilla-central-build/security/manager/ssl/nsNSSComponent.cpp:2539:24: error: ?MakeScopeExit? was not declared in this scope
19:56.73  2539 |   auto exitTelemetry = MakeScopeExit([&] {
19:56.73       |                        ^~~~~~~~~~~~~

The first bad revision is:
changeset: 580105:4b4d4f52df08
user: Dana Keeler <dkeeler@mozilla.com>
date: Wed May 19 16:25:52 2021 -0700
description:
Bug 1711154 - collect telemetry on how long it takes to look for client auth certificates r=bbeurdouche data-review?chutten

Keywords: regression
Regressed by: 1711154
Has Regression Range: --- → yes

The Bugbug bot thinks this bug should belong to the 'Core::Security: PSM' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Security: PSM
Product: Firefox → Core
Assignee: nobody → petr.sumbera

Set release status flags based on info from the regressing bug 1711154

Attachment #9222771 - Attachment description: Bug 1712064 - add missing include header → Bug 1712064 - add missing ScopeExit header
Pushed by dkeeler@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f10854e202d8
add missing ScopeExit header r=keeler
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Comment on attachment 9222771 [details]
Bug 1712064 - add missing ScopeExit header

Approved for the beta branch before 89 RC, thanks.

Attachment #9222771 - Flags: approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: