Bug 1712064 - add missing ScopeExit header r=keeler a=pascalc

Bug 1711154 should have landed with the header for ScopeExit.

Differential Revision: https://phabricator.services.mozilla.com/D115586